# archivematica

./: .dockerignore  .gitattributes  .pre-commit-config.yaml  README.md  README_PERMANENT.md  RELEASENOTES.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/: dependabot.yml
.github/workflows/: acceptance-test.yml  build.yml  generate-sbom.yml  oidc-integration-test.yml  push-images.yml  test.yml  validate-action-pinning.yml
hack/: Dockerfile  Makefile  README.md  docker-compose.yml
src/MCPServer/lib/server/: rpc_server.py
src/archivematica/MCPClient/client/: mcp.py
src/archivematica/MCPClient/clientScripts/: archivematica_clamscan.py  change_names.py  change_object_names.py  compress_aip.py  index_aip.py  move_to_backlog.py  post_store_aip_hook.py  transcribe_file.py
src/archivematica/MCPClient/install/: README.md  clientConfig.conf
src/archivematica/MCPClient/settings/: common.py
src/archivematica/MCPServer/assets/: workflow.json
src/archivematica/MCPServer/server/: rpc_server.py
src/archivematica/archivematicaCommon/: aip_mets_parser.py  archivematicaFunctions.py  databaseFunctions.py  dicts.py  elasticSearchFunctions.py
src/archivematica/dashboard/: wsgi.py
src/archivematica/dashboard/components/: advanced_search.py
src/archivematica/dashboard/components/accounts/: forms.py  views.py
src/archivematica/dashboard/components/archival_storage/: views.py
src/archivematica/dashboard/components/backlog/: views.py
src/archivematica/dashboard/components/file/: views.py
src/archivematica/dashboard/components/filesystem_ajax/: views.py
src/archivematica/dashboard/components/ingest/: views.py
src/archivematica/dashboard/fpr/migrations/: 0050_remove_usr_dir_references.py  0051_remove_maildir_commands.py  0052_update_validation_rules.py  0053_update_jhove_tool.py
src/archivematica/dashboard/fpr/templates/fpr/fpcommand/: detail.html
src/archivematica/dashboard/frontend/: package-lock.json  package.json
src/archivematica/dashboard/install/: README.md  archivematica-dashboard.service  dashboard.gunicorn-config.py
src/archivematica/dashboard/main/: models.py
src/archivematica/dashboard/main/management/commands/: __init__.py  purge_transient_processing_data.py  rebuild_aip_index_from_storage_service.py  rebuild_elasticsearch_aip_index_from_files.py  rebuild_transfer_backlog.py  reindex_from_remote_cluster.py  update_elasticsearch_mappings.py
src/archivematica/dashboard/main/migrations/: 0084_alter_job_index_together.py
src/archivematica/dashboard/middleware/: common.py
src/archivematica/dashboard/settings/: base.py
src/archivematica/dashboard/settings/components/: csp.py
src/archivematica/dashboard/templates/: search_service_error.html
src/archivematica/search/: client.py  constants.py  deleting.py  exceptions.py  indexing.py  indices.py  querying.py  service.py  updating.py  utils.py
src/archivematica/settings/: testmysql.py
src/archivematicaCommon/lib/: version.py
src/dashboard/main/: models.py
tests/: conftest.py
tests/MCPClient/: test_antivirus.py  test_archivematicaCreateMETSRights.py  test_characterize_file.py  test_create_mets_v2.py  test_create_transfer_mets.py  test_extract_contents.py  test_filename_change.py  test_fpr_commands.py  test_identify_file_format.py  test_move_to_backlog.py  test_parse_external_mets.py  test_post_store_aip_hook.py  test_transcribe_file.py  test_verify_checksum.py
tests/archivematicaCommon/: test_database_functions.py  test_elasticsearch_functions.py
tests/dashboard/: test_access.py  test_api.py  test_api_v2beta.py  test_auth.py  test_backlog.py  test_cas.py  test_filesystem_ajax.py  test_ingest.py  test_middleware.py  test_shibboleth_login.py  test_transfer.py
tests/dashboard/components/accounts/: test_forms.py  test_views.py
tests/dashboard/components/administration/: test_administration.py  test_dip_upload_configs.py  test_processing_config.py  test_storage.py  test_usage.py
tests/dashboard/components/archival_storage/: test_archival_storage.py
tests/dashboard/components/file/: test_views.py
tests/dashboard/components/unit/: test_views.py
tests/dashboard/fpr/: test_views.py
tests/dashboard/main/: test_command_purge_transient_processing_data.py
tests/integration/: docker-compose.yml  test_oidc_auth.py
tests/search/: test_search.py  test_service.py
